  * apt-clone is now a separate package.
  * Add a partitioning heading to help clarify what operating systems
    may be acted upon by the installer.
  * Remove ' (loader)' from the os-prober operating system descriptions on
    the initial partitioning page.
  * Properly substitute in the non-Ubuntu system when generating descriptions
    for dual boot partitioning.

  [ Colin Watson ]
  * Preprocess our variant of keyboard-configuration.postinst, so that it
    includes the keyboard_present function.
  * Start oem-config-debconf on stopping rc RUNLEVEL=[2345], rather than on
    (filesystem and stopped udevtrigger); this guarantees that we will never
    end up without a controlling terminal because tty1 has already started.
  * Don't run the oem-config job in recovery mode (thanks, Shih-Yuan Lee;
    LP: #734695).
  * Run plugininstall in debconf frontend (LP: #740183).

 -- Evan Dandrea <ev@ubuntu.com>  Mon, 21 Mar 2011 12:34:41 +0000

ubiquity (2.5.27) natty; urgency=low

  * Drop code related to debian-installer/fallbacklocale, since that
    template no longer exists (LP: #736060).
  * Update imported translations from gtk+2.0 2.24.3-0ubuntu2 and
    gnome-panel 1:2.32.1-0ubuntu6.
  * Ensure that PartedServer dialogs are always properly closed on
    exceptional paths.
  * Fix partition-table-full check to cope with disks without a partition
    table.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 16 Mar 2011 14:36:02 +0000

ubiquity (2.5.26) natty; urgency=low

  [ Evan Dandrea ]
  * Revert dropping privileges earlier (LP: #730209).

  [ Colin Watson ]
  * Update for changes in localechooser up to 2.34ubuntu1.
  * Automatic update of included source packages: localechooser 2.34ubuntu2,
    partman-auto 93ubuntu10.
  * Update translations from Launchpad.
  * GTK frontend:
    - Translate some other possible versions of the next button when
      changing language (LP: #730208).

  [ Daniel Manrique ]